# risk-scoring-service

./: README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: main.yml
src/: main.py
